PS falta el 3 y las simulaciones

--- a/scripts/Problem sets/PS2_2BP.ipynb
+++ b/scripts/Problem sets/PS2_2BP.ipynb
@@ -160,6 +160,31 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Solución**\n",
+        "\n",
+        "reemplazemos \n",
+        "\n",
+        "$$x  =  x' \\cos\\theta - y' \\sin\\theta $$\n",
+        "$$y  =  x' \\sin\\theta + y' \\cos\\theta $$\n",
+        "\n",
+        "en:\n",
+        "\n",
+        "$$Ax^2 + Bxy + Cy^2 + Dx + Ey + G = 0$$\n",
+        "\n",
+        "haciendo el desarrollo algebraico:\n",
+        "\n",
+        "\\begin{align*}\n",
+        "x'^2(A\\cos^2\\theta + B\\cos\\theta + \\sin\\theta) &+ x'(D\\cos\\theta + E\\sin\\theta) \\\\\n",
+        "&+ y'^2(A\\sin^2\\theta - B\\sin\\theta \\cos\\theta) \\\\\n",
+        "&+ x'y'(2A\\cos\\theta \\sin\\theta + B\\cos^2\\theta - B\\sin^2\\theta) \\\\\n",
+        "&+ 2C\\sin\\theta + 6 = 0\n",
+        "\\end{align*}\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "1HZjmjGxexW3"
       },
@@ -497,6 +522,34 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "La velocidad límte de los cuerpos será en el periapsis y a esta distancia es la que conocemos como q.\n",
+        "\n",
+        "sabemos que, la Vis Viva esta definida por:\n",
+        "\n",
+        "$$ V^2=\\mu (\\frac{2}{r}-\\frac{1}{a}) $$ \n",
+        "\n",
+        "para que la velocidad sea la límite r = q además por las propiedades de la cónica \n",
+        "$a=\\frac{q}{1-e}$,entonces:\n",
+        "\n",
+        "$$V_{max}=\\sqrt{\\mu (\\frac{1+e}{q})}$$\n",
+        "\n",
+        "en el límte entraran en el planeta si q = radio terrestre\n",
+        "\n",
+        "(*)$$V_{max}=\\sqrt{\\mu (\\frac{1+e}{r_{earth}})}$$   \n",
+        "\n",
+        "como la orbita es circular e = 1, com la masa de los cuerpos es despreciable $\\mu=Gm_{earth}$, así:\n",
+        "\n",
+        "> $$V_{max}=\\sqrt{\\frac{2Gm_{earth}}{r_{earth}}}$$\n",
+        "\n",
+        "b) si analizamos a *, nos podemos dar de cuenta que si tomamos la excentricidad real de la tierra, entonces lo que va a pasar es que al disminuir e,  entonces la velocidad límite va a ser menor \n",
+        "\n",
+        "----"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "9OtnN7UYU_27"
       },
@@ -518,6 +571,39 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Solución**\n",
+        "\n",
+        "tengamos en cuenta resultados anteriores:\n",
+        "\n",
+        "$\\sigma=\\frac{h}{\\sqrt{2\\epsilon}}$  y $\\epsilon=\\frac{1}{2} V^2$\n",
+        "\n",
+        "de aqui podemos obtener que $ h=\\sigma V$\n",
+        "\n",
+        "Partiendo de la ecuacion en coordendas polares para una cónica:\n",
+        "\n",
+        "$$r=\\frac{h^2/\\mu}{1+ecos\\theta}$$\n",
+        "\n",
+        "para la distancia mímima (d),tenemos que:\n",
+        "\n",
+        "$$d=\\frac{h^2/\\mu}{1+e}$$\n",
+        "\n",
+        "sabemos que $e=\\sqrt{1+\\frac{2\\epsilon h^2}{\\mu^2}}$,reemplazando, tenemos:\n",
+        "\n",
+        "$$d=\\frac{h^2/\\mu}{1+\\sqrt{1+\\frac{2\\epsilon h^2}{\\mu^2}}}$$\n",
+        "\n",
+        "reemplazando h y $\\epsilon$, podemos llegar a que:\n",
+        "\n",
+        "$$d=\\frac{\\sigma^2V^2}{\\mu(1+\\sqrt{1+\\frac{V^4\\sigma^2}{\\mu^2}})}$$\n",
+        "\n",
+        "invirtiendo la fraccion y sabiendo que $\\mu=G(M+m)$,tenemos que:\n",
+        "\n",
+        "> $$\\frac{1}{d} = \\frac{G(M+m)}{\\sigma²V²}\\left(1+\\sqrt{1+\\frac{\\sigma²V⁴}{G²(M+m)²}}\\right)$$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "0MaY2_I1k0Zp"
       },
@@ -529,11 +615,72 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "tomando en cuenta la expresiín para la anomalía excentrica:\n",
+        "\n",
+        "(1) $$E-esinE=n(t-t_0)$$\n",
+        "\n",
+        "asumiendo t0=0 en el punto inicial $E=\\pi/2$, reemplazandp en (1), podemos obtener que:\n",
+        "\n",
+        "$$t=\\frac{\\pi-2e}{2n}$$\n",
+        "\n",
+        "sabemos que $n=\\frac{2\\pi}{T}$, reemplazando en t:\n",
+        "\n",
+        "$$t=\\frac{\\frac{\\pi-2e}{1}}{\\frac{2\\pi}{T}}$$\n",
+        "\n",
+        "simplifacando podemos obtener que:\n",
+        "\n",
+        "$$t=T(\\frac{1}{2}-\\frac{e}{\\pi}$$\n",
+        "\n",
+        "este es el timepo que tarda un planeta en ir del apoapsis al periapsis, este tiempo es un poco inferior a la mitad de su periodo y esto tiene sentido ya que en el periapsis el planeta tiene la velocidad máxima"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "ePAQM9gxvjIo"
       },
       "source": [
         "**11. Libración en longitud.** Un planeta se mueve alrededor del Sol en una órbita elíptica y rota en torno a un eje perpendicular al plano de su órbita con un periodo igual a su periodo orbital. Encuentre la máxima libración en longitud y dónde en la órbita ocurre."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "La ecuación de la libración esta dada por:\n",
+        "\n",
+        "$$l=M-f$$\n",
+        "\n",
+        "La máxima libración cumple la condición de que:\n",
+        "\n",
+        "$$\\frac{\\partial M}{\\partial E}-\\frac{\\partial f}{\\partial E}=0$$\n",
+        "\n",
+        "por otro lado, tenemos que:\n",
+        "\n",
+        "$$M=E-einE$$\n",
+        "$$\\frac{\\partial M}{\\partial E}=1-ecosE$$\n",
+        "\n",
+        "Ahora, para f:\n",
+        "\n",
+        "$$tan \\frac{f}{2}=\\sqrt{\\frac{1+e}{1-e}}tan\\frac{E}{2}$$\n",
+        "\n",
+        "despejando f y obteniendo la derivada parcial respecto a E, obtenemos que:\n",
+        "\n",
+        "$$\\frac{\\partial f}{\\partial E}=\\frac{\\sqrt{1-e^2}}{1-ecosE}$$\n",
+        "\n",
+        "reemplazando ambas derivadas parciales en la condición:\n",
+        "\n",
+        "$$1-ecosE-\\frac{\\sqrt{1-e^2}}{1-ecosE}=0$$\n",
+        "\n",
+        "con algebra básica se obtiene que:\n",
+        "\n",
+        "$$cosE=\\frac{1-\\sqrt[4]{1-e^2}}{e}$$\n",
+        "\n",
+        "sabemos que r=a(1-ecosE), despejando ecosE, y uniendo ambas ecuaciones podemos obtener que:\n",
+        "\n",
+        "> $$r=a+\\sqrt[4]{1-e^2}$$\n"
       ]
     },
     {
