PS punto 3 listo

--- a/scripts/Problem sets/PS2_2BP.ipynb
+++ b/scripts/Problem sets/PS2_2BP.ipynb
@@ -176,11 +176,25 @@
         "haciendo el desarrollo algebraico:\n",
         "\n",
         "\\begin{align*}\n",
-        "x'^2(A\\cos^2\\theta + B\\cos\\theta + \\sin\\theta) &+ x'(D\\cos\\theta + E\\sin\\theta) \\\\\n",
-        "&+ y'^2(A\\sin^2\\theta - B\\sin\\theta \\cos\\theta) \\\\\n",
-        "&+ x'y'(2A\\cos\\theta \\sin\\theta + B\\cos^2\\theta - B\\sin^2\\theta) \\\\\n",
-        "&+ 2C\\sin\\theta + 6 = 0\n",
-        "\\end{align*}\n"
+        "x'^2(A\\cos^2\\theta + B\\cos\\theta + C \\sin^2\\theta) &+ x'(D\\cos\\theta + E\\sin\\theta) \\\\\n",
+        "&+ y'^2(A\\sin^2\\theta - B\\sin\\theta \\cos\\theta + C \\cos^2 \\theta) \\\\\n",
+        "& +y'(-D\\sin\\theta+Ecos\\theta\\\\\n",
+        "&+ x'y'(-2A\\cos\\theta \\sin\\theta + B\\cos^2\\theta - B\\sin^2\\theta) \\\\\n",
+        "&+ 2C\\sin\\theta cos \\theta) + G = 0\n",
+        "\\end{align*}\n",
+        "\n",
+        "si queremos que loe ejes esten alineados con los ejes de simetria no deben de haber terminos cruzados, para que eso se cumpla:\n",
+        "\n",
+        "\\begin{align}\n",
+        "-2A\\cos\\theta + B(\\cos^2\\theta - \\sin^2\\theta) + 2C\\sin\\theta &= 0 \\\\\n",
+        "2A\\cos\\theta \\sin\\theta(C-A) + B(\\cos^2\\theta - \\sin^2\\theta) &= 0\n",
+        "\\end{align}\n",
+        "\n",
+        "\n",
+        "Haciendo el algebra correspoondiente podemos llegar a que:\n",
+        "\n",
+        "$$\\tan 2\\theta = \\frac{B}{A-C}$$\n",
+        "\n"
       ]
     },
     {
