conclusión de la estabilidad de la constante de Jacobi

--- a/scripts/Quices/MC_Cuaderno_MovimientoSistemaRotante.ipynb
+++ b/scripts/Quices/MC_Cuaderno_MovimientoSistemaRotante.ipynb
@@ -4482,7 +4482,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 74,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Primero obtengamos r1 y r2\n",
+        "r1 = np.linalg.norm(rjwst - rsun, axis=1)\n",
+        "r2 = np.linalg.norm(rjwst - rearth, axis=1)\n",
+        "\n",
+        "# Hallemos la magnitud de la velocidad en el sistema de rotacion del JWST\n",
+        "vjwst_rot_magnitude = np.linalg.norm(vjwst_rot, axis=1)\n",
+        "\n",
+        "# Ahora para la constante de Jacobi\n",
+        "C_j = (2 * (mu1/r1 + mu2/r2) +\n",
+        "       omega**2 * (rjwst_rot[:, 0]**2 + rjwst_rot[:, 1]**2) -\n",
+        "       vjwst_rot_magnitude)\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "graficando la constante de Jacobi en el tiempo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 75,
       "metadata": {},
       "outputs": [
         {
@@ -4497,18 +4525,6 @@
         }
       ],
       "source": [
-        "# Primero obtengamos r1 y r2\n",
-        "r1 = np.linalg.norm(rjwst - rsun, axis=1)\n",
-        "r2 = np.linalg.norm(rjwst - rearth, axis=1)\n",
-        "\n",
-        "# Hallemos la magnitud de la velocidad en el sistema de rotacion del JWST\n",
-        "vjwst_rot_magnitude = np.linalg.norm(vjwst_rot, axis=1)\n",
-        "\n",
-        "# Ahora para la constante de Jacobi\n",
-        "C_j = (2 * (mu1/r1 + mu2/r2) +\n",
-        "       omega**2 * (rjwst_rot[:, 0]**2 + rjwst_rot[:, 1]**2) -\n",
-        "       vjwst_rot_magnitude)\n",
-        "\n",
         "# Convertir las fechas en formato \"A.D. 2023-Oct-05 00:00:00.0000\" a \"2023-Oct-05\"\n",
         "dates = [datetime.strptime(date, \"A.D. %Y-%b-%d %H:%M:%S.%f\").strftime(\"%Y-%b-%d\") for date in jwst['datetime_str']]\n",
         "\n",
@@ -4521,73 +4537,14 @@
         "\n",
         "plt.tight_layout()  # para asegurarnos que las etiquetas no se corten\n",
         "plt.title('Constante de Jacobi en el Tiempo',fontweight='bold')\n",
-        "plt.show()\n"
+        "plt.show()"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 71,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "0      A.D. 2023-Oct-05 00:00:00.0000\n",
-              "1      A.D. 2023-Oct-06 00:00:00.0000\n",
-              "2      A.D. 2023-Oct-07 00:00:00.0000\n",
-              "3      A.D. 2023-Oct-08 00:00:00.0000\n",
-              "4      A.D. 2023-Oct-09 00:00:00.0000\n",
-              "                    ...              \n",
-              "362    A.D. 2024-Oct-01 00:00:00.0000\n",
-              "363    A.D. 2024-Oct-02 00:00:00.0000\n",
-              "364    A.D. 2024-Oct-03 00:00:00.0000\n",
-              "365    A.D. 2024-Oct-04 00:00:00.0000\n",
-              "366    A.D. 2024-Oct-05 00:00:00.0000\n",
-              "Name: datetime_str, Length: 367, dtype: object"
-            ]
-          },
-          "execution_count": 71,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": [
-        "jwst['datetime_str']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "array([[0., 0., 0.],\n",
-              "       [0., 0., 0.],\n",
-              "       [0., 0., 0.],\n",
-              "       ...,\n",
-              "       [0., 0., 0.],\n",
-              "       [0., 0., 0.],\n",
-              "       [0., 0., 0.]])"
-            ]
-          },
-          "execution_count": 32,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "# Definamos una función que obtenga la constante de Jacobi\n",
-        "\n",
-        "def Jacobi_constant(mu1,mu2,r1,r2,w,rxy_rot,v):\n",
-        "\n",
-        "    # Obteniendo las componentes x y y \n",
-        "    x=rxy_rot[0]\n",
-        "    y=rxy_rot[1]\n",
-        "\n",
-        "    C_j=2(mu1/r1+mu2/r2)+w**2(x**2+y**2)-v**2\n",
-        "    return C_j\n"
+        "Se puede observar, que a pesar que se produce una variación  en el gráfico, esto es debido a la escala ya que si vemos los valores entre los cuales oscila, podemos determinar que esta variable es aproximadamente constante"
       ]
     }
   ],
