Corrigiendo la gráfica de JWST

--- a/scripts/Quices/MC_Cuaderno_MovimientoSistemaRotante.ipynb
+++ b/scripts/Quices/MC_Cuaderno_MovimientoSistemaRotante.ipynb
@@ -4468,9 +4468,16 @@
         "fig.add_trace(go.Scatter3d(x=rsun_rot[:,0], y=rsun_rot[:,1], z=rsun_rot[:,2], mode='markers', name='Sun'))\n",
         "fig.add_trace(go.Scatter3d(x=rjwst_rot[:,0], y=rjwst_rot[:,1], z=rjwst_rot[:,2], mode='lines', name='jwst'))\n",
         "\n",
-        "fig.update_layout(title=\"Trayectoria del wst en el sistema rotante\", scene=dict(aspectmode='cube'))\n",
+        "fig.update_layout(title=\"Trayectoria del JWST en el sistema rotante\", scene=dict(aspectmode='cube'))\n",
         "fig.show()\n",
         "fig.write_html(\"trayectorias_planetas.html\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Esta gráfica tiene sentido ya que, el JWSt tiene que estar cerca a la tierra todo el tiempo, de manera tal que su posición en el sistema rotante no se debe de alejar de la misma"
       ]
     },
     {
@@ -4496,9 +4503,7 @@
         "# Ahora para la constante de Jacobi\n",
         "C_j = (2 * (mu1/r1 + mu2/r2) +\n",
         "       omega**2 * (rjwst_rot[:, 0]**2 + rjwst_rot[:, 1]**2) -\n",
-        "       vjwst_rot_magnitude)\n",
-        "\n",
-        "\n"
+        "       vjwst_rot_magnitude)\n"
       ]
     },
     {
