--- a/scripts/Homeworks/MC_Tarea4_ViajeALaLuna.ipynb
+++ b/scripts/Homeworks/MC_Tarea4_ViajeALaLuna.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6XE49aAfGdAu"
+      },
       "source": [
         "<p>\n",
         "<img src=\"https://drive.google.com/uc?id=1ZHUKcwzA5c-PKUwoGmBG3TsHk6TmZ-Y0\" align=\"left\" width=\"250\">\n",
@@ -28,37 +17,37 @@
         "<h5><center><b>Asignada</b>: 12 de Octubre de 2023</center><h5>\n",
         "<h5><center><b>Entrega</b>: 26 de Octubre de 2023</center><h5>\n",
         "</p>"
-      ],
-      "metadata": {
-        "id": "6XE49aAfGdAu"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "DZ3br0tlHiUH"
+      },
       "source": [
         "<hr/>\n",
-        "<b>Nombre</b>:\n",
+        "<b>Nombre</b>: Bryan Camilo Restrepo Arcila\n",
         "<br/>\n",
-        "<b>Cédula</b>:\n",
+        "<b>Cédula</b>: 1000567825\n",
         "<br/>\n",
         "<b>Última actualización</b>:\n",
         "<hr/>"
-      ],
-      "metadata": {
-        "id": "DZ3br0tlHiUH"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Enunciado"
-      ],
       "metadata": {
         "id": "32KKSLFEHYpg"
-      }
+      },
+      "source": [
+        "## Enunciado"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "BJv9-ZZAIUgW"
+      },
       "source": [
         "**Objetivo**: En esta tarea nos proponemos estudiar las denominadas trayectorias de retorno libre a la Luna usando la teoría del CRTBP, apoyado por lo que sabemos el problema de los dos cuerpos.\n",
         "\n",
@@ -83,13 +72,13 @@
         "3. Simule el movimiento de la nave usando la rutina `crtbp_solucion` y mire cómo es la trayectoria, tanto en el sistema rotante como en el sistema de referencia inercial. Calcule la constante de Jacobi, grafique las regiones de exclusión y la superficie de cero velocidad correspondiente a este valor de la constante de Jacobi.\n",
         "\n",
         "4. Es posible que en el primer intento no consiga la trayectoria deseada (una trayectoria que lleve la nave hasta la Luna y que después la regrese a la Tierra). Modifique con cuidado las condiciones iniciales de la nave (en especial la velocidad incial) hasta que consiga una o varias trayectorias de retorno libre en el sistema. Calcule el apogeo y el perigeo de la trayectoria de la nave respecto a la Tierra y el tiempo que tardaría la nave en salir de la órbita alrededor de la Tierra y en regresar a un punto cercano."
-      ],
-      "metadata": {
-        "id": "BJv9-ZZAIUgW"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "NI1EmWvOa_o2"
+      },
       "source": [
         "**Resultados esperados**:\n",
         "\n",
@@ -107,28 +96,39 @@
         "  - Animación de las trayectorias de retorno libre.\n",
         "\n",
         "- En caso de utilizar ayudas como `ChatGPT` o códigos de `Stack Over Flow` debe citar debidamente la fuente, pero también entender a cabalidad el código, el profesor puede pedir justificación."
-      ],
-      "metadata": {
-        "id": "NI1EmWvOa_o2"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Solución"
-      ],
       "metadata": {
         "id": "J0ISSYQpHex_"
-      }
+      },
+      "source": [
+        "## Solución"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "iH20o0jpHhgr"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
