HW4 point2 ready

--- a/scripts/Homeworks/MC_Tarea4_ViajeALaLuna.ipynb
+++ b/scripts/Homeworks/MC_Tarea4_ViajeALaLuna.ipynb
@@ -100,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -134,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -144,8 +144,8 @@
         "# Masa de la tierra en Kg\n",
         "M_earth = c.M_earth.value\n",
         "\n",
-        "# mu para la tierra\n",
-        "mu_earth_international = G_international*M_earth \n",
+        "# Masa de la luna en Kg\n",
+        "M_moon =  7.342e22\n",
         "\n",
         "# Periodo sideral de la luna\n",
         "T_sideral_moon = 27.3 #días\n",
@@ -156,7 +156,22 @@
         "\n",
         "d2s = 86400 # Días a segundos\n",
         "\n",
-        "deg2rad = np.pi/180 # Grados a radianes\n"
+        "deg2rad = np.pi/180 # Grados a radianes\n",
+        "\n",
+        "\n",
+        "## Unidades Canónicas del crtbp\n",
+        "\n",
+        "# Unidad de masa\n",
+        "UM = M_earth + M_moon # Kg\n",
+        "\n",
+        "# Unidad de longitud\n",
+        "UL = 383000*km2m # m\n",
+        "\n",
+        "# unidad de tiempo\n",
+        "UT = UT = (UL**3/(G_international*UM))**0.5 # segundos\n",
+        "\n",
+        "# Unidade de velocidad\n",
+        "UV = UL/UT\n"
       ]
     },
     {
@@ -185,25 +200,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "La velocidad del satelite para una orbita circular es :3327.497 m/s\n"
+            "La velocidad del satelite para una orbita circular es :3.242 UC\n"
           ]
         }
       ],
       "source": [
         "# Ahora veamos númericamente este valor\n",
-        "r_orbit = 36000*km2m # Radio de la orbita en metros  \n",
+        "r_orbit = 36000*km2m/UL # Radio de la orbita en metros  \n",
+        "\n",
+        "# mu de la tierra en unidades canónicas\n",
+        "mu_earth = M_earth/UM\n",
         "\n",
         "# Velocidad que debe tener un satelite en una orbita circular\n",
-        "v_satelite_o = (mu_earth_international/r_orbit)**0.5\n",
+        "v_satelite_o = (mu_earth/r_orbit)**0.5\n",
         "\n",
-        "print(f'La velocidad del satelite para una orbita circular es :{v_satelite_o:.3f} m/s')"
+        "print(f'La velocidad del satelite para una orbita circular es :{v_satelite_o:.3f} UC')"
       ]
     },
     {
@@ -229,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -237,20 +255,20 @@
           "output_type": "stream",
           "text": [
             "El impulso que se le debe de dar para alcanzar la orbita\n",
-            "de tranferencia de Hohmann es de 1171.597 m/s\n"
+            "de tranferencia de Hohmann es de 1.141 UC\n"
           ]
         }
       ],
       "source": [
         "# Primero definamos ambos radios\n",
-        "r_peri = 36000*km2m\n",
-        "r_apo = 383000*km2m\n",
+        "r_peri = 36000*km2m/UL\n",
+        "r_apo = 383000*km2m/UL\n",
         "\n",
         "# Hallemos al parámetro \"a\" de la elipse:\n",
         "a_eliptic_orbit = (r_peri + r_apo)/2\n",
         "\n",
         "# Ahora veamos la velocidad en el perigeo para esta orbita elíptica\n",
-        "v_eliptic_orbit = (mu_earth_international*(2/r_peri-1/a_eliptic_orbit))**0.5\n",
+        "v_eliptic_orbit = (mu_earth*(2/r_peri-1/a_eliptic_orbit))**0.5\n",
         "\n",
         "# Entonces el impulso será la diferencia entre la velocidad en la orbita circular\n",
         "# y la velocidad en el perigeo de la orbita eliptica\n",
@@ -258,7 +276,27 @@
         "delta_v = v_eliptic_orbit - v_satelite_o\n",
         "\n",
         "print(f'''El impulso que se le debe de dar para alcanzar la orbita\n",
-        "de tranferencia de Hohmann es de {delta_v:.3f} m/s''')"
+        "de tranferencia de Hohmann es de {delta_v:.3f} UC''')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 52,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "4.383310586337449"
+            ]
+          },
+          "execution_count": 52,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "v_eliptic_orbit"
       ]
     },
     {
@@ -292,27 +330,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "72.82544713603487"
+              "72.8254471360349"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 46,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Veamos el timepo que tarda el satelite en ir del perigeo al apogeo\n",
-        "t_satelite = np.pi*(a_eliptic_orbit**3/mu_earth_international)**0.5\n",
+        "t_satelite = np.pi*(a_eliptic_orbit**3/mu_earth)**0.5\n",
         "\n",
         "# Calculemos la velocidad angular de la luna\n",
-        "T_sideral_moon_s = T_sideral_moon*d2s # Segundos\n",
-        "w_moon = 360/T_sideral_moon_s\n",
+        "T_sideral_moon_s = T_sideral_moon*d2s/UT # Segundos\n",
+        "\n",
+        "# Este valor de acuerdo con las unidade escogidas debe estar muy cerca a 1 rad/UT\n",
+        "w_moon = 360/T_sideral_moon_s \n",
         "\n",
         "df = w_moon*t_satelite \n",
         "\n",
@@ -328,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -337,7 +377,7 @@
               "252.82544713603488"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 39,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -412,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [
         {
@@ -420,30 +460,191 @@
           "output_type": "stream",
           "text": [
             "Las posiciones y velocidades iniciales de la nave son:\n",
-            "x = 10630.214895128884 \n",
-            "y = -34394.74569295985\n",
-            "Vx = -4298.476828858075\n",
-            "Vy = 1328.5090932318299\n",
+            "x = -2.7755130274487942e-05 UC\n",
+            "y = -8.98035135586419e-05 UC\n",
+            "Vx = 4.187857025287091 UCV\n",
+            "Vy = -1.2943203745794574 UCV\n",
             "\n"
           ]
         }
       ],
       "source": [
         "# Para las posiciones\n",
-        "x_initial = -r_peri*np.cos(true_anomaly_satelite*deg2rad)/km2m\n",
+        "x_initial = r_peri*np.cos(true_anomaly_satelite*deg2rad)/km2m\n",
         "y_initial = r_peri*np.sin(true_anomaly_satelite*deg2rad)/km2m\n",
         "\n",
         "# Para las velocidades\n",
-        "Vx_initial = v_eliptic_orbit*np.sin(true_anomaly_satelite*deg2rad)\n",
-        "Vy_initial = -v_eliptic_orbit*np.cos(true_anomaly_satelite*deg2rad)\n",
+        "Vx_initial = -v_eliptic_orbit*np.sin(true_anomaly_satelite*deg2rad)\n",
+        "Vy_initial = v_eliptic_orbit*np.cos(true_anomaly_satelite*deg2rad)\n",
         "\n",
         "print(f'''Las posiciones y velocidades iniciales de la nave son:\n",
-        "x = {x_initial} \n",
-        "y = {y_initial}\n",
-        "Vx = {Vx_initial}\n",
-        "Vy = {Vy_initial}\n",
+        "x = {x_initial} UC\n",
+        "y = {y_initial} UC\n",
+        "Vx = {Vx_initial} UCV\n",
+        "Vy = {Vy_initial} UCV\n",
         "''')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "1. Calcule la posición y velocidad inicial de la Tierra en un sistema de referencia inercial en el que el origen está en el centro de masa de la Tierra y la Luna y la Luna y la Tierra orbitan con un semieje mayor relativo igual a 383 000 km."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Par este calculo podemos asumir que inicialmente, en el sistema de referencia inercial ambos cuerpos, tanto la luna como la tierra  estan en el eje x, así podemos encontrar la posición de la tierra con respecto al centro de masa, y esta solo tendra componente en x inicialmente al igual que la luna, podemos usar el vector relativo (que estaría en el eje x) y transformarlo comosi estuvieramos llevando de coordenadas de Jacobi al sistema coordenado original, así que la posición inicial de la tierra estará en:\n",
+        "\n",
+        "$$\\vec{r_{earth}} = \\frac{M_{moon}}{M_{earth}+M_{moon}}\\vec{r}$$\n",
+        "\n",
+        "Con esto podemos encontrar la posición de la tierra respecto al centro de masa, veamoslo númericamente"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([-0.01214439,  0.        ,  0.        ])"
+            ]
+          },
+          "execution_count": 42,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Recordemos que la posicón incial solo estara en el eje x\n",
+        "\n",
+        "# Posicion inicial de la tierra respecto al centro de masa\n",
+        "x_earth_initial = -r_apo*M_moon/(M_moon + M_earth) # A su vez este es el parámetro alfa\n",
+        "\n",
+        "# Posición incial de la tierra en el espacio en metrs\n",
+        "r_earth_initial = np.array([x_earth_initial, 0, 0])\n",
+        "r_earth_initial"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Ahora veamos la velocidad de la tierra, asumiendo que inicialmente la tierra esta en el eje x, entonces la velocidad estara en el eje y  de hecho asumiremos un sentido de grio tal que la tierra se mueve en contra de las manecillas del reloj, así que sabemos cual es la velocidad angular de la tierra respecto al centro de masa al igual que su distancia al centro de masa, con esto podremos encontrar la velocidad circular asumiendo una trayectoria circular y esta es una de las condiciones de crtbp, así que veamos esta velocidad númericamente, teniendo en cuenta quela velocidad angular de la tierra es la misma que la de la luna,  y la velocidad lineal esta relacionada con la angular de la siguiente manera:\n",
+        "\n",
+        "$$v= w*r$$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 60,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([ 0.        , -0.01207134,  0.        ])"
+            ]
+          },
+          "execution_count": 60,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Velocidad de la tierra es:\n",
+        "V_earth_initial = np.array([0, -w_moon*deg2rad*np.linalg.norm(r_earth_initial), 0])\n",
+        "V_earth_initial"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "2. Calcule ahora la posición y velocidad inicial de la nave en el sistema de referencia inercial y en el momento en el que recibe el impulso Para ello simplemente sume a la posición y velocidad inicial de la nave, la posición y velocidad inicial de la Tierra en t = 0."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "ya tenemos la posición y velocidad de la nave respecto a la tierra, y sabemos la posición inicial de la tierra respecto al centro de masa, así entonces si queremos encontrar la posición de la nave respecto al centro de masa bastara con  sumar los vectores"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([-1.21721490e-02, -8.98035136e-05,  0.00000000e+00])"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Vector posición de la nave respecto a la tierra \n",
+        "r_ship_earth = np.array([x_initial, y_initial, 0])\n",
+        "\n",
+        "# Vector posición de la nave respecto al centro de masa\n",
+        "r_ship_initial = r_earth_initial + r_ship_earth\n",
+        "r_ship_initial"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Ahora para la velocidad"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 61,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([ 4.18785703, -1.30639171,  0.        ])"
+            ]
+          },
+          "execution_count": 61,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Vector posición de la nave respecto a la tierra \n",
+        "V_ship_earth = np.array([Vx_initial, Vy_initial, 0])\n",
+        "\n",
+        "# Vector velocidad de la nave respecto al centro de masa\n",
+        "V_ship_initial = V_earth_initial + V_ship_earth\n",
+        "V_ship_initial"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "3. Simule el movimiento de la nave usando la rutina `crtbp_solucion` y mire cómo es la trayectoria, tanto en el sistema rotante como en el sistema de referencia inercial. Calcule la constante de Jacobi, grafique las regiones de exclusión y la superficie de cero velocidad correspondiente a este valor de la constante de Jacobi."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
