HW5_6 3point ready

--- a/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb
+++ b/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb
@@ -316,7 +316,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "3. Identifique las variables generalizadas del sistema y explique por qué esas variables son apropiadas para describir el sistema con el método de Lagrange."
+        "### 3. Identifique las variables generalizadas del sistema y explique por qué esas variables son apropiadas para describir el sistema con el método de Lagrange."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "La variables generalizadas más correctas del problema del pendulo doble son los angulos $\\theta_1$ y $\\theta_2$, estos angulos son los angulos que tienen las varillas con respecto al eje y, y tienen ventajas respecto a otras coordendas generalizadas porque:\n",
+        "\n",
+        "- Reducen el número de coordenadas necesarias: Al utilizar los ángulos, se reducen las cuatro coordenadas cartesianas a solo dos coordenadas generalizadas.\n",
+        "\n",
+        "- Simplifican las restricciones: Las longitudes de las varillas son constantes y, por tanto, no necesitan ser consideradas como variables independientes. Los ángulos incorporan naturalmente esta restricción geométrica."
       ]
     },
     {
